# autoBBQ

./: CMakeLists.txt  autoBBQ.ino  logsprediction_log.txt
include/: BBQ.h  BBQFSM.h  BBQpins.h  Timer.h
src/: main.cpp
